--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "movie-picker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "",
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
@@ -24,6 +25,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -48,6 +51,7 @@
   },
   "devDependencies": {
     "3d-react-carousal": "^5.0.0",
+    "gh-pages": "^4.0.0",
     "tailwindcss": "^3.1.8"
   }
 }
